Add EsqlNodeSubclassTests (ESQL-972)
Add EsqlNodeSubclassTests (subclass of NodeSubclassTests) to assert
correctness of NodeInfo, transforms, and replaceChildren convention of
Node classes.