@@ -56,13 +56,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.jar.JarEntry;
 import java.util.jar.JarInputStream;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.mockito.Mockito.mock;
 
 /**
@@ -309,7 +309,10 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     @ParametersFactory
     @SuppressWarnings("rawtypes")
     public static List<Object[]> nodeSubclasses() throws IOException {
-        return subclassesOf(Node.class).stream().filter(c -> testClassFor(c) == null).map(c -> new Object[] { c }).collect(toList());
+        return subclassesOf(Node.class, CLASSNAME_FILTER).stream()
+            .filter(c -> testClassFor(c) == null)
+            .map(c -> new Object[] { c })
+            .toList();
     }
 
     /**
@@ -396,9 +399,12 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
                         }
                     };
                 }
-
             }
-            throw new IllegalArgumentException("Unsupported parameterized type [" + pt + "]");
+            Object obj = pluggableMakeParameterizedArg(toBuildClass, pt);
+            if (obj != null) {
+                return obj;
+            }
+            throw new IllegalArgumentException("Unsupported parameterized type [" + pt + "], for " + toBuildClass.getSimpleName());
         }
         if (argType instanceof WildcardType wt) {
             if (wt.getLowerBounds().length > 0 || wt.getUpperBounds().length > 1) {
@@ -534,7 +540,11 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
         return makeArg(TestEnclosedAgg.class);
     }
 
-    protected Object pluggableMakeArg(Class<? extends Node<?>> toBuildClass, Class<?> argClass) {
+    protected Object pluggableMakeArg(Class<? extends Node<?>> toBuildClass, Class<?> argClass) throws Exception {
+        return null;
+    }
+
+    protected Object pluggableMakeParameterizedArg(Class<? extends Node<?>> toBuildClass, ParameterizedType pt) {
         return null;
     }
 
@@ -591,12 +601,13 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
 
     public <T extends Node<?>> T makeNode(Class<? extends T> nodeClass) throws Exception {
         if (Modifier.isAbstract(nodeClass.getModifiers())) {
-            nodeClass = randomFrom(subclassesOf(nodeClass));
+            nodeClass = randomFrom(innerSubclassesOf(nodeClass));
         }
         Class<?> testSubclassFor = testClassFor(nodeClass);
         if (testSubclassFor != null) {
             // Delegate to the test class for a node if there is one
             Method m = testSubclassFor.getMethod("random" + Strings.capitalize(nodeClass.getSimpleName()));
+            assert Modifier.isStatic(m.getModifiers()) : "Expected static method, got:" + m;
             return nodeClass.cast(m.invoke(null));
         }
         Constructor<? extends T> ctor = longestCtor(nodeClass);
@@ -610,10 +621,33 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
      */
     private static final Map<Class<?>, Set<?>> subclassCache = new HashMap<>();
 
+    private static final Predicate<String> CLASSNAME_FILTER = className -> {
+        // filter the class that are not interested
+        // (and IDE folders like eclipse)
+        if (className.startsWith("org.elasticsearch.xpack.ql") == false
+            && className.startsWith("org.elasticsearch.xpack.sql") == false
+            && className.startsWith("org.elasticsearch.xpack.eql") == false) {
+            return false;
+        }
+        return true;
+    };
+
+    protected Predicate<String> pluggableClassNameFilter() {
+        return CLASSNAME_FILTER;
+    }
+
+    private <T> Set<Class<? extends T>> innerSubclassesOf(Class<T> clazz) throws IOException {
+        return subclassesOf(clazz, pluggableClassNameFilter());
+    }
+
+    public static <T> Set<Class<? extends T>> subclassesOf(Class<T> clazz) throws IOException {
+        return subclassesOf(clazz, CLASSNAME_FILTER);
+    }
+
     /**
      * Find all subclasses of a particular class.
      */
-    public static <T> Set<Class<? extends T>> subclassesOf(Class<T> clazz) throws IOException {
+    public static <T> Set<Class<? extends T>> subclassesOf(Class<T> clazz, Predicate<String> classNameFilter) throws IOException {
         @SuppressWarnings("unchecked") // The map is built this way
         Set<Class<? extends T>> lookup = (Set<Class<? extends T>>) subclassCache.get(clazz);
         if (lookup != null) {
@@ -636,7 +670,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
                         String name = je.getName();
                         if (name.endsWith(".class")) {
                             String className = name.substring(0, name.length() - ".class".length()).replace("/", ".");
-                            maybeLoadClass(clazz, className, root + "!/" + name, results);
+                            maybeLoadClass(clazz, className, root + "!/" + name, classNameFilter, results);
                         }
                     }
                 }
@@ -652,7 +686,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
                             String className = fileName.substring(rootLength, fileName.length() - ".class".length());
                             // Go from "path" style to class style
                             className = className.replace(PathUtils.getDefaultFileSystem().getSeparator(), ".");
-                            maybeLoadClass(clazz, className, fileName, results);
+                            maybeLoadClass(clazz, className, fileName, classNameFilter, results);
                         }
                         return FileVisitResult.CONTINUE;
                     }
@@ -671,14 +705,14 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     /**
      * Load classes from predefined packages (hack to limit the scope) and if they match the hierarchy, add them to the cache
      */
-    private static <T> void maybeLoadClass(Class<T> clazz, String className, String location, Set<Class<? extends T>> results)
-        throws IOException {
-
-        // filter the class that are not interested
-        // (and IDE folders like eclipse)
-        if (className.startsWith("org.elasticsearch.xpack.ql") == false
-            && className.startsWith("org.elasticsearch.xpack.sql") == false
-            && className.startsWith("org.elasticsearch.xpack.eql") == false) {
+    private static <T> void maybeLoadClass(
+        Class<T> clazz,
+        String className,
+        String location,
+        Predicate<String> classNameFilter,
+        Set<Class<? extends T>> results
+    ) throws IOException {
+        if (classNameFilter.test(className) == false) {
             return;
         }
 
@@ -700,7 +734,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
      * if there isn't such a class or it doesn't extend
      * {@link AbstractNodeTestCase}.
      */
-    private static Class<?> testClassFor(Class<?> nodeSubclass) {
+    protected static Class<?> testClassFor(Class<?> nodeSubclass) {
         String testClassName = nodeSubclass.getName() + "Tests";
         try {
             Class<?> c = Class.forName(testClassName);
